Update Rectangle toolpath in app.js library
Work for "straight rectangles" on X & Y axis.
Doesn't implement yet features to "rotate" a rectangle, or to have a
rectangle not parallel to X and Y axis.

--- a/dashboard/apps/rectangle/index.html
+++ b/dashboard/apps/rectangle/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<!-- Header -->
-	<header class="green"> <!-- Class can be "blue", "red", "grey", "orange" -->
+	<header class="black"> <!-- Class can be "blue", "red", "grey", "orange" -->
 		<section>
 			<div class="app-title-container">
 				<h2>Cut a Rectangle</h2>
@@ -114,7 +114,7 @@
 				<div class="small-12 medium-6 large-4 columns">
 					<div class="row">
 						<div class="small-7 columns">
-							<h3>Add a Rectangle/h3>
+							<h3>Add a Rectangle</h3>
 						</div>
 						<div class="small-5 columns">
 							<div class="small button right secondary" id="add-rectangle">Add</div>
@@ -145,12 +145,12 @@
 								<div class="row">
 									<div class="small-6 columns">
 										<label>End X :
-										<input type="text" value="4" id="rectangle_x1" class="first">
+										<input type="text" value="4" id="rectangle_x1">
 										</label>
 									</div>
 									<div class="small-6 columns">
 										<label>Start Y :
-										<input type="text" value="2" id="rectangle_y1" class="last">
+										<input type="text" value="2" id="rectangle_y1">
 										</label>
 									</div>
 								</div>
@@ -159,18 +159,18 @@
 								<div class="row">
 									<div class="small-6 columns">
 										<label>Width :
-										<input type="text" value="4" id="rectangle_w" class="first">
+										<input type="text" value="4" id="rectangle_w" class="active">
 										</label>
 									</div>
 									<div class="small-6 columns">
 										<label>Height Y :
-										<input type="text" value="2" id="rectangle_h" class="last">
+										<input type="text" value="2" id="rectangle_h" class="active">
 										</label>
 									</div>
 								</div>
 							</div>
 							<div class="small-4 columns center">
-								<Label>Coor ↔ Size
+								<Label>Dim ↔ Pts
 								<div class="switch small">
 									<input id="dimensions_method" type="checkbox" name="dimensions_method">
 									<label for="dimensions_method"></label>
