Edit Shapes Library, drawing app, Dashboard Layout

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -103,25 +103,23 @@
                 <li><label>Position</label></li>
                 <li>
                   <div class="row axis">
-                    <div class="small-8 columns">
+                    <div class="small-10 columns">
                       <label>X<span class="in">in</span><span class="posx pos"></span><input type"text" class="posx pos" style="display:none;" value=""></label>
                     </div>
                     <div class="small-2 columns home"><span class="button-zerox">X<label>0</label></span></div>
-                    <div class="small-2 columns set"><span class="button-homexy"></span></div>
                   </div>
                   <div class="row axis">
-                    <div class="small-8 columns">
+                    <div class="small-10 columns">
                       <label>Y<span class="in">in</span><span class="posy pos"></span><input type"text" class="posy pos" style="display:none;" value=""></label>
                     </div>
                     <div class="small-2 columns home"><span class="button-zeroy">Y<label>0</label></span></div>
-                    <div class="small-2 columns set"><span class="button-homez"></span></div>
                   </div>
                   <div class="row axis">
-                    <div class="small-8 columns">
+                    <div class="small-10 columns">
                       <label>Z<span class="in">in</span><span class="posz pos"></span><input type"text" class="posx pos" style="display:none;" value=""></label>
                     </div>
                     <div class="small-2 columns home"><span class="button-zeroz">Z<label>0</label></span></div>
-                    <div class="small-2 columns set"><span class="button-probez"></span></div>
+                    
                   </div>
                 </li>
                 <li>
@@ -132,22 +130,22 @@
                   <div class="row inOutSwitch">
                     <div class="small-6 columns">
                       <div class="row switch">
-                        <div class="small-3 columns prox-sw-1">| 1 |</div><div class="small-3 columns prox-sw-2">| 2 |</div>
-                        <div class="small-3 columns prox-sw-3">| 3 |</div><div class="small-3 columns prox-sw-4">| 4 |</div>
-                        <div class="small-3 columns prox-sw-5">| 5 |</div><div class="small-3 columns prox-sw-6">| 6 |</div>
-                        <div class="small-3 columns prox-sw-7">| 7 |</div><div class="small-3 columns prox-sw-8">| 8 |</div>
-                        <div class="small-3 columns prox-sw-9">| 9 |</div><div class="small-3 columns prox-sw-10">| 10 |</div>
-                        <div class="small-3 columns prox-sw-11">| 11 |</div><div class="small-3 columns prox-sw-12">| 12 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-1">| 1 |</div><div style="display:none;" class="small-3 columns prox-sw-2">| 2 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-3">| 3 |</div><div style="display:none;" class="small-3 columns prox-sw-4">| 4 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-5">| 5 |</div><div style="display:none;" class="small-3 columns prox-sw-6">| 6 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-7">| 7 |</div><div style="display:none;" class="small-3 columns prox-sw-8">| 8 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-9">| 9 |</div><div style="display:none;" class="small-3 columns prox-sw-10">| 10 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-11">| 11 |</div><div style="display:none;" class="small-3 columns prox-sw-12">| 12 |</div>
                       </div>
                     </div>
                      <div class="small-6 columns">
                       <div class="row switch">
-                        <div class="small-3 columns prox-sw-1">| 1 |</div><div class="small-3 columns prox-sw-2">| 2 |</div>
-                        <div class="small-3 columns prox-sw-3">| 3 |</div><div class="small-3 columns prox-sw-4">| 4 |</div>
-                        <div class="small-3 columns prox-sw-5">| 5 |</div><div class="small-3 columns prox-sw-6">| 6 |</div>
-                        <div class="small-3 columns prox-sw-7">| 7 |</div><div class="small-3 columns prox-sw-8">| 8 |</div>
-                        <div class="small-3 columns prox-sw-9">| 9 |</div><div class="small-3 columns prox-sw-10">| 10 |</div>
-                        <div class="small-3 columns prox-sw-11">| 11 |</div><div class="small-3 columns prox-sw-12">| 12 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-1">| 1 |</div><div style="display:none;" class="small-3 columns prox-sw-2">| 2 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-3">| 3 |</div><div style="display:none;" class="small-3 columns prox-sw-4">| 4 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-5">| 5 |</div><div style="display:none;" class="small-3 columns prox-sw-6">| 6 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-7">| 7 |</div><div style="display:none;" class="small-3 columns prox-sw-8">| 8 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-9">| 9 |</div><div style="display:none;" class="small-3 columns prox-sw-10">| 10 |</div>
+                        <div style="display:none;" class="small-3 columns prox-sw-11">| 11 |</div><div style="display:none;" class="small-3 columns prox-sw-12">| 12 |</div>
                       </div>
                     </div>
                   </div>
@@ -175,7 +173,14 @@
                         <button class="button button-plus-Z"></button>
                         <button class="button button-minus-Z"></button>
                     </div> 
-                  </div>              
+                  </div> 
+                  <div class="row fabmo-status">
+                    <div class="small-3 columns"></div>
+                    <div class="small-2 columns set"><span class="button-homexy"></span></div>
+                    <div class="small-2 columns set"><span class="button-homez"></span></div>
+                    <div class="small-2 columns set"><span class="button-probez"></span></div>
+                    <div class="small-3 columns"></div>
+                  </div>            
                   </li>
               </ul>
             </div>
