Add rotate action on shapes

--- a/dashboard/apps/2d_drawer/index.html
+++ b/dashboard/apps/2d_drawer/index.html
@@ -272,23 +272,23 @@
 								<div class="row">
 									<!-- The name of the shape should not be removed : use to edit the line. It is possible to hide it but not to remove it -->
 									<div class="small-4 small-offset-4 end columns center">
-										<Label>Top<div class="switch small"><input id="rotate_top" type="radio" checked name="rotate_base" value="T"><label for="rotate_top"></label></div></Label>
+										<Label>Top<div class="switch small"><input id="rotate_top" type="radio" checked name="rotate_base" value="topLeft"><label for="rotate_top"></label></div></Label>
 									</div>
 								</div>
 								<div class="row">
 									<div class="small-4 columns center">
-										<Label>Left<div class="switch small"><input id="rotate_left" type="radio" name="rotate_base" value="L"><label for="rotate_left"></label></div></Label>
+										<Label>Left<div class="switch small"><input id="rotate_left" type="radio" name="rotate_base" value="topRight"><label for="rotate_left"></label></div></Label>
 									</div>
 									<div class="small-4 columns center">
-										<Label>Center<div class="switch small"><input id="rotate_center" type="radio" name="rotate_base" value="C"><label for="rotate_center"></label></div></Label>
+										<Label>Center<div class="switch small"><input id="rotate_center" type="radio" name="rotate_base" value="center"><label for="rotate_center"></label></div></Label>
 									</div>
 									<div class="small-4 columns center">
-										<Label>Right<div class="switch small"><input id="rotate_right" type="radio" name="rotate_base" value="R"><label for="rotate_right"></label></div></Label>
+										<Label>Right<div class="switch small"><input id="rotate_right" type="radio" name="rotate_base" value="bottomLeft"><label for="rotate_right"></label></div></Label>
 									</div>
 								</div>
 								<div class="row">
 									<div class="small-4 small-offset-4 end columns center">
-										<Label>Bottom<div class="switch small"><input id="rotate_bottom" type="radio" checked name="rotate_base" value="B"><label for="rotate_bottom"></label></div></Label>
+										<Label>Bottom<div class="switch small"><input id="rotate_bottom" type="radio" checked name="rotate_base" value="bottomRight"><label for="rotate_bottom"></label></div></Label>
 									</div>
 								</div>
 								<div class="row">
