Improve Left Menu view (colapsed)

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -67,7 +67,7 @@
           <!-- 
               Sliding Wiget Menu (fix for large screen)
           -->
-          <aside class="left-off-canvas-menu" id="left-menu">
+          <aside class="left-off-canvas-menu colapsed" id="left-menu">
 
             <!-- ***** Machines on network Widget ***** -->
             <div id="widget-tools-network" class="widget show-for-small-only">
@@ -80,7 +80,7 @@
             </div>
 
             <!-- ********** Links Widget ********** -->
-            <div id="widget-links-general" class="widget">
+            <div id="widget-links-general" class="widget colapsed">
               <ul class="off-canvas-list" id="util-menu-small">
                 <li><label>Utilities</label></li>
                 <li><a href="#/menu" id="icon_home"><span>Home</span></a></li>
